8210303: VM_HandshakeAllThreads fails assert with "failed: blocked and not walkable"

Reviewed-by: dcubed, dholmes